Fix scrollbar not appearing for main content div

--- a/src/Resources/public/css/shuwee_admin/base.css
+++ b/src/Resources/public/css/shuwee_admin/base.css
@@ -480,12 +480,7 @@ body {
 }
 
 #body-wrapper {
-  overflow: hidden;
   padding-top: 51px;
-  height: 100%;
-}
-
-#page-wrapper {
   height: 100%;
 }
 
