--- a/src/Resources/public/scss/_global.scss
+++ b/src/Resources/public/scss/_global.scss
@@ -12,20 +12,12 @@ body {
 }
 
 #body-wrapper {
-  overflow: hidden;
   padding-top: 51px;
-  height: 100%;
-}
-
-#page-wrapper {
   height: 100%;
 }
 
 a {
   color: $blue_0fa2ce;
-}
-
-#layer-content {
 }
 
 #layer-content-body {
